// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = false should create email challenge UI elements when profile email is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "actionParams": {
            "resend": true,
          },
          "buttonText": "email.button.resend",
          "content": "email.code.not.received",
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.email.verify.alternate.magicLinkToYourEmailoie.email.verify.alternate.verificationCode.instructions",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = false should create email challenge UI elements when resend code is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.verificationCode.instructions",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = false should create email challenge UI elements when resend code is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "actionParams": {
            "resend": true,
          },
          "buttonText": "email.button.resend",
          "content": "email.code.not.received",
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.verificationCode.instructions",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = true should create email challenge UI elements when profile email is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "buttonText": "email.button.resend",
                  "content": "email.code.not.received",
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToYourEmailoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "label": "oie.email.verify.alternate.show.verificationCode.text",
                "options": {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "buttonText": "email.button.resend",
                  "content": "email.code.not.received",
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToYourEmailoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "focus": true,
                "options": {
                  "inputMeta": {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
              },
              {
                "label": "mfa.challenge.verify",
                "options": {
                  "step": "mock-step",
                  "type": "submit",
                },
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = true should create email challenge UI elements when resend code is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "label": "oie.email.verify.alternate.show.verificationCode.text",
                "options": {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "focus": true,
                "options": {
                  "inputMeta": {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
              },
              {
                "label": "mfa.challenge.verify",
                "options": {
                  "step": "mock-step",
                  "type": "submit",
                },
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = true should create email challenge UI elements when resend code is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "buttonText": "email.button.resend",
                  "content": "email.code.not.received",
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "label": "oie.email.verify.alternate.show.verificationCode.text",
                "options": {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              {
                "options": {
                  "actionParams": {
                    "resend": true,
                  },
                  "buttonText": "email.button.resend",
                  "content": "email.code.not.received",
                  "isActionStep": true,
                  "step": "resend",
                },
                "type": "Reminder",
              },
              {
                "options": {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              {
                "focus": true,
                "options": {
                  "inputMeta": {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
              },
              {
                "label": "mfa.challenge.verify",
                "options": {
                  "step": "",
                  "type": "submit",
                },
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = undefined should create email challenge UI elements when profile email is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "actionParams": {
            "resend": true,
          },
          "buttonText": "email.button.resend",
          "content": "email.code.not.received",
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.email.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = undefined should create email challenge UI elements when resend code is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "content": "oie.email.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Email Authenticator Enroll Transformer Tests Email Magic Link = undefined should create email challenge UI elements when resend code is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.email.mfa.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "actionParams": {
            "resend": true,
          },
          "buttonText": "email.button.resend",
          "content": "email.code.not.received",
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.email.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "focus": true,
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
